PerfRunner now working
Signed-off-by: olivier lamy <olamy@apache.org>