@@ -15,9 +15,22 @@
 	<name>Jetty Runtime :: Perf :: Perf Runner</name>
 	<description>Running load testing</description>
 
+	<properties>
+		<mainClass>com.google.cloud.runtime.jetty.perf.PerfRunner</mainClass>
+	  <host>jetty-runtime-perf-app-dot-jetty9-work.appspot.com</host>
+		<port>443</port>
+		<running.time>30</running.time>
+		<running.time.unit>m</running.time.unit>
+		<transaction_rate>3</transaction_rate>
+		<transport>https</transport>
+		<users>2</users>
+		<profile.json>${basedir}/loadgenerator_profile.groovy</profile.json>
+		<warmup.number>10</warmup.number>
+	</properties>
+
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.jetty.loadgenerator</groupId>
+			<groupId>org.webtide.jetty.loadgenerator</groupId>
 			<artifactId>jetty-load-generator-starter</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
@@ -30,5 +43,84 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<shadedClassifierName>uber</shadedClassifierName>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>${mainClass}</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>run-perf</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>run-perf-tests</id>
+								<phase>install</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>java</executable>
+									<arguments>
+										<argument>-showversion</argument>
+										<argument>-Xmx2048m</argument>
+										<argument>-Xms2048m</argument>
+										<!--
+										<argument>-XX:+PrintCommandLineFlags</argument>
+										<argument>-XX:+PrintGCTimeStamps</argument>
+										<argument>-XX:+PrintGCDetails</argument>
+										<argument>-XX:+UseParallelOldGC</argument>
+										<argument>-XX:+AggressiveOpts</argument>
+										-->
+										<!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
+										<!--<argument>-XX:+UseG1GC</argument>-->
+										<argument>-cp</argument>
+										<classpath />
+										<argument>${mainClass}</argument>
+										<argument>-Dwarmup.number=${warmup.number}</argument>
+										<argument>-h</argument><argument>${host}</argument>
+										<argument>--port</argument><argument>${port}</argument>
+										<argument>--running-time</argument><argument>${running.time}</argument>
+										<argument>--running-time-unit</argument><argument>${running.time.unit}</argument>
+										<argument>--transaction-rate</argument><argument>${transaction_rate}</argument>
+										<argument>--transport</argument><argument>${transport}</argument>
+										<argument>--users</argument><argument>${users}</argument>
+										<argument>--profile-groovy-path</argument><argument>${profile.json}</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
